--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
         <title>Hello World</title>
     </head>
     <body>
-        <div> id="allRepos"></div>
+        <div id="allRepos"></div>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
